Added padding on footer

--- a/frontend/sass/events/_detail.sass
+++ b/frontend/sass/events/_detail.sass
@@ -8,6 +8,9 @@
   width: 318px
   padding-right: 5px
 
+#event-footer
+  padding: 5px 5px 5px 0
+
 #event-detail-view
   +billpay-detail-view
   +branch-detail-view
