--- a/frontend/sass/events/billpay/_detail.sass
+++ b/frontend/sass/events/billpay/_detail.sass
@@ -1,10 +1,6 @@
 = billpay-detail-view
   .processing-summary
-    margin: 0.5em 0
-    padding: 10px 0
-    border: 1px solid #d4d4d4
-    border-width: 1px 0
-    background: url(/images/background.png) repeat-x left -250px
+    +highlight
     p
       text-align: center
       margin: 0.3em 0
