--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -20,9 +20,11 @@
   %script{:src => google_js_src, :type => 'text/javascript'}
 
   :javascript
-    require({ baseUrl: "/javascripts/compiled" }, ["order!vendor/underscore", "order!vendor/backbone", "order!app/controllers/members/timeline_controller", "order!app/controllers/members/available_services_controller", "order!app/models/event_list"], function(underscore, backbone, MemberTimelineController, AvailableServicesController, EventList) {
+    require({ baseUrl: "/javascripts/compiled" }, ["order!vendor/underscore", "order!vendor/backbone", "order!app/controllers/members/timeline_controller", "order!app/controllers/members/available_services_controller", "order!app/models/event_list", "order!app/models/member"], function(underscore, backbone, MemberTimelineController, AvailableServicesController, EventList, Member) {
 
       Backbone.emulateHTTP = true;
+
+      window.member = new Member(#{@account.member.to_json});
 
       var timelineController = new MemberTimelineController({
         fetchOnInit: true,
