--- a/frontend/views/merchants/search_with_options.handlebars
+++ b/frontend/views/merchants/search_with_options.handlebars
@@ -1,3 +1,9 @@
-<p><strong>We do not currently have detailed information about this merchant.</strong> However, we found the following possibilities using Google Local. Does one of these options look correct?</p>
+<p class="note"><strong>We do not currently have detailed information about this merchant.</strong> However, we found the following possibilities using Google Local. Does one of these options look correct?</p>
 
-<div id="search-results"></div>
+<div class="search-results"><ul></ul></div>
+
+<div class="search-form">
+  <h4>Improve search results:</h4>
+  <input type="text" name="search-input" class="text search-field" value="{{ defaultSearch }}" />
+  <button class="search">Search</button>
+</div>
