--- a/public/javascripts/compiled/views/timeline/events/check/detail.handlebars
+++ b/public/javascripts/compiled/views/timeline/events/check/detail.handlebars
@@ -8,6 +8,7 @@
 </div>
 {{/check_image}}
 
+{{#merchant}}
 <div class="available-service billpay">
   <h2>Avaliable service: MyVantage Bill Pay</h2>
   <p>It looks like you regularly write checks to Trugreen.  Would you like to sign up for MyVantage Bill Pay to automate these payments?</p>
@@ -16,3 +17,4 @@
     <li><a href="#billpay/no" class="no">No, thanks</a></li>
   </ul>
 </div>
+{{/merchant}}
