--- a/frontend/sass/screen.sass
+++ b/frontend/sass/screen.sass
@@ -38,9 +38,9 @@
   position: absolute
   top: 2px
   right: 15px
-  display: none
   ul
     +horizontal-list(5px)
     a
+      font-size: 10px
       +hover-link
-      +link-colors(#fff, #fff)
+      +link-colors(#007B82)
