--- a/frontend/sass/merchants/_search.sass
+++ b/frontend/sass/merchants/_search.sass
@@ -4,12 +4,16 @@
     color: #3C64A0
     font-size: 11px
     margin: 0 0 0.2em
+  &.results-available
+    .search-results
+      display: block
   .search-results
     height: 150px
     width: 318px
     border: 1px solid #d4d4d4
     border-width: 1px 0
     margin: 1em 0
+    display: none
     ul
       +no-bullets
       +reset-box-model
@@ -31,6 +35,7 @@
           font-size: 10px
           margin: 0
   .search-form
+    margin-top: 0.5em
     h4
       font-size: 11px
       font-weight: bold
