--- a/public/javascripts/compiled/views/merchants/search_with_options.handlebars
+++ b/public/javascripts/compiled/views/merchants/search_with_options.handlebars
@@ -1,5 +1,10 @@
 {{#defaultSearch}}
-<p class="note"><strong>We do not currently have detailed information about this merchant.</strong> However, we found the following possibilities using Google Local. Does one of these options look correct?</p>
+
+<p class="note">
+  <strong>We do not currently have detailed information about this merchant.</strong>
+  <span class="search-summary"></span>
+</p>
+
 {{/defaultSearch}}
 
 <div class="search-results"><ul></ul></div>
