Progress on subaccount navigation

--- a/frontend/views/members/account.handlebars
+++ b/frontend/views/members/account.handlebars
@@ -1,3 +1,5 @@
 <h3>
-  <span class="account-number">{{ account_number }}</span>
+  {{#current}}
+    <span class="account-number">{{ number }}</span>
+  {{/current}}
 </h3>
