--- a/public/javascripts/compiled/views/members/account.handlebars
+++ b/public/javascripts/compiled/views/members/account.handlebars
@@ -1,5 +1,5 @@
 <h3>
   {{#current}}
-    <span class="account-number">{{ number }}</span>
+    Account <span class="account-number">#{{ number }}</span>
   {{/current}}
 </h3>
