--- a/frontend/sass/screen.sass
+++ b/frontend/sass/screen.sass
@@ -12,7 +12,7 @@
 @import prompts
 
 @import timeline
-@import rewards
+//@import rewards
 @import merchants
 @import social
 
@@ -23,6 +23,7 @@
 @import tellers
 
 @import members/all
+@import accounts/all
 
 @import merchants/search
 
@@ -31,7 +32,6 @@
 
 #container
   position: relative
-  padding-top: 20px
 
 #global
   float: right
