--- a/frontend/views/members/subaccount.handlebars
+++ b/frontend/views/members/subaccount.handlebars
@@ -5,12 +5,12 @@
   {{/formattedAvailableBalance}}
 </div>
 
-<h3>{{name}}</h3>
+<h3><a href="#">{{name}}</a></h3>
 
 <div class="meta">
   <span class="subaccount-number">
     {{accountNumber}}-<strong>{{suffix}}</strong>
   </span>
   |
-  <a href="#" class="manage">manage account</a>
+  <a href="#" class="manage">manage account &#9662;</a>
 </div>
