--- a/public/javascripts/compiled/views/members/subaccount.handlebars
+++ b/public/javascripts/compiled/views/members/subaccount.handlebars
@@ -5,7 +5,7 @@
   {{/formattedAvailableBalance}}
 </div>
 
-<h3><a href="#">{{name}}</a></h3>
+<h3><a href="#subaccounts/{{id}}">{{name}}</a></h3>
 
 <div class="meta">
   <span class="subaccount-number">
