--- a/public/javascripts/compiled/views/accounts/timeline.handlebars
+++ b/public/javascripts/compiled/views/accounts/timeline.handlebars
@@ -4,6 +4,7 @@
       <td class="date">Date</td>
       <td class="name">Description</td>
       <td class="amount">Amount</td>
+      <td class="balance">Balance</td>
     </tr>
   </thead>
   <tbody class="ui-widget-content"></tbody>
